Fixed Bugs in week 1 friday project

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,51 +3,18 @@
   margin-left: 165px;
 }
 
-ol {
-  border-style: double;
-  border-radius: 5% !important;
-  padding: 10%;
-}
-
-.logo {
-  margin-top: -68px;
-  border-radius: 50%
-}
-
-#aboutme {
-  float: left;
-  padding: 10px;
-}
-
-li {
-  font-size: 20px;
-}
-
 h2 {
   font-size: 30px;
-}
-
-#contact {
-  float: right;
-  margin-right: 92px;
-  margin-top: -156px;
-}
-
-#list2 {
-  border-style: double;
-  padding: 40px;
-  border-radius: 25% !important;
 }
 
 a {
   text-decoration: none;
 }
 
-#span {
-  font-size: 25px;
-  font-weight: bold;
-}
-
 a:hover {
   background-color: pink;
+}
+
+.heading {
+  color: blue;
 }
